# bigcedilla

./: .gitignore  Cargo.toml  README.md  deny.toml
pkgbuild/: PKGBUILD  bigcedilla-check-layout  bigcedilla-configure-kwin  bigcedilla-restore-maliit  bigcedilla.desktop  bigcedilla.install  bigcedilla.service
scripts/: security-check.sh
src/: compose.rs  main.rs  proxy.rs  spawn.rs
test/: probe-plasma-keyboard.sh
